--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "import/no-absolute-path": "off",
     "react/display-name": "off",
     "react/require-default-props": "off",
-    "react/no-unescaped-entities": "off",
+    "react/no-unescaped-entities": "on",
     "react/jsx-props-no-spreading": "off",
     // "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
