--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   "env": {
     "es2021": true,
     "browser": true,
-    "node": true
+    "node": false
   },
   "rules": {
     "radix": "off",
